tests/diagnostics/expressions/equality/unexpected_equals/expect.txt
# exit: 1
input/main.lang0:2:14: error: unexpected '=' in expression
      return 1 = 2
               ^
